--- a/src/components/site.css
+++ b/src/components/site.css
@@ -2,7 +2,8 @@ body,
 body > div,
 body > div > div,
 body > div > div > div {
-    font-family: Baskerville, 'Times New Roman', Times, serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     min-height: 100vh;
 }
 
@@ -23,7 +24,7 @@ h1 {
 }
 
 h2 {
-    align-items: baseline;
+    align-items: center;
     display: flex;
     font-size:  1.6rem;
     justify-content: center;
